--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.4+4
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -23,18 +23,37 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  rate_my_app:
+    git:
+      url: https://github.com/SourabhMahale98/RateMyApp
+  auto_size_text: ^2.1.0
   cupertino_icons: ^1.0.2
+  double_back_to_close_app: ^2.0.1
+  equatable: ^2.0.0
+  firebase_messaging: ^9.1.0
   fl_chart: ^0.20.1
-  flutter_bloc: ^6.1.3
-  geolocator: ^6.1.14
-  google_fonts: ^1.1.2
-  http: ^0.12.0
-  # intl: ^0.17.0
+  flutter_bloc: ^7.0.0
+  flutter_svg_provider: ^0.1.8
+  geocoding: ^2.0.0
+  google_fonts: ^2.0.0
+  google_mobile_ads: ^0.12.1
+  http: ^0.13.0
+  in_app_update: ^2.0.0
+  intl: ^0.17.0
+  location: ^4.1.1
+  lottie: ^1.0.1
+  share: ^2.0.1
   sliding_up_panel: ^1.0.2
+  url_launcher: ^6.0.3
+  firebase_crashlytics: ^2.0.0
+  flutter_launcher_icons: ^0.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+flutter_icons:
+  android: "launcher_icon"
+  image_path: "assets/icons/earth.png"    
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -49,6 +68,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
@@ -58,12 +78,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: DesIcon
+      fonts:
+        - asset: assets/icons/DesIcon.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
